[tool.poetry]
name = "alvanon-test"
version = "0.1.0"
description = ""
authors = ["Zijian <42588942+zs856@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
